--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -48,13 +48,28 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_proximo"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/branco"
-        android:textStyle="bold"
-        android:text="@string/btn_avancar"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_anterior"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:src="@mipmap/arrow_left"
+            android:background="@color/colorPrimary"
+            android:contentDescription="@string/btn_prev"/>
+
+        <ImageButton
+            android:id="@+id/btn_proximo"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:src="@mipmap/arrow_right"
+            android:background="@color/colorPrimary"
+            android:text="@string/btn_next"/>
+    </LinearLayout>
 
 </LinearLayout>
