--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,68 +8,132 @@
     android:paddingBottom="16dp"
     tools:context="br.ifpe.kaio.geoquiz.QuizActivity">
 
-    <TextView
-        android:id="@+id/pergunta_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:padding="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/azul"
-        android:textSize="19sp"
-        android:text="@string/pergunta1" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="vertical"
+        android:gravity="right">
+
+        <TextView
+            android:id="@+id/pergunta_restante"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:text="@string/perguntas_restantes"
+            android:textAlignment="viewStart"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/pergunta_quantidade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="195dp"
+            android:textAlignment="textEnd"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            android:text="@string/quantidade"/>
+
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
-        <Button
-            android:id="@+id/btn_true"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="5dp"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/branco"
-            android:textStyle="bold"
-            android:text="@string/btn_verdadeiro"/>
+        <TextView
+            android:id="@+id/pergunta_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
+            android:layout_marginBottom="5dp"
+            android:padding="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/azul"
+            android:textSize="19sp"
+            android:text="@string/pergunta1"/>
 
-        <Button
-            android:id="@+id/btn_false"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/branco"
-            android:textStyle="bold"
-            android:text="@string/btn_falso"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_true"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="5dp"
+                android:background="@color/colorPrimary"
+                android:text="@string/btn_verdadeiro"
+                android:textColor="@color/branco"
+                android:textStyle="bold"
+                tools:ignore="ButtonStyle" />
+
+            <Button
+                android:id="@+id/btn_false"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/branco"
+                android:textStyle="bold"
+                android:text="@string/btn_falso"
+                tools:ignore="ButtonStyle" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btn_anterior"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="5dp"
+                android:src="@mipmap/arrow_left"
+                android:contentDescription="@string/btn_prev"
+                android:background="@color/colorPrimary" />
+
+            <ImageButton
+                android:id="@+id/btn_proximo"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:src="@mipmap/arrow_right"
+                android:contentDescription="@string/btn_next"
+                android:background="@color/colorPrimary" />
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btn_anterior"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="5dp"
-            android:src="@mipmap/arrow_left"
-            android:contentDescription="@string/btn_prev"
-            android:background="@color/colorPrimary" />
+            <Button
+                android:id="@+id/btn_cheat"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/btn_cheat"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/branco"
+                android:textStyle="bold"
+                tools:ignore="ButtonStyle"/>
 
-        <ImageButton
-            android:id="@+id/btn_proximo"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:src="@mipmap/arrow_right"
-            android:contentDescription="@string/btn_next"
-            android:background="@color/colorPrimary" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
